solicitudes espacio público y privado listas